# fasttrees

./: .codecov.yml  .gitignore  .pylintrc  LICENSE.txt  README.md  _config.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: openssf-scorecard.yml  pages.yml  pylint.yml  python-package.yml  python-publish-testpypi.yml  python-publish.yml  reuse-compliance.yml
LICENSES/: MIT.txt
data/: heartdisease_test.csv  heartdisease_train.csv  heartdisease_train.csv.license
docs/: Gemfile  Gemfile.lock.license  _config.yml  examples.md  index.md
docs/assets/images/: favicon.ico.license
fasttrees/: __init__.py  fasttrees.py
tests/: __init__.py  fasttrees_test.py
