# SPDX-FileCopyrightText: 2019-2024 Dominic Zijlstra <dominiczijlstra@gmail.com>, Stefan Bachhofner <bachhofner.dev@gmail.com>
#
# SPDX-License-Identifier: MIT

[metadata]
name = fasttrees
license = MIT

author = Dominic Zijlstra, Stefan Bachhofner
author_email = dominiczijlstra@gmail.com, bachhofner.dev@gmail.com

description = A fast and frugal tree classifier for sklearn
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/fasttrees/fasttrees

project_urls =
        Documentation = https://fasttrees.github.io/fasttrees
        Source Code = https://github.com/fasttrees/fasttrees
        Tracker = https://github.com/fasttrees/fasttrees/issues


[options]
packages = find: fasttrees

python_requires = >=3.8

install_requires =
    numpy>=1.22.0,
    pandas<=0.25.3,
    scikit-learn<=0.23.2

classifiers =
        License :: OSI Approved :: MIT License

        Intended Audience :: Science/Research
        Intended Audience :: Developers

        Topic :: Software Development
        Topic :: Scientific/Engineering

        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.8
